--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "make-js",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "create declarative, parallel and incremental makefile in javascript",
   "main": "index.js",
   "bin": {
@@ -23,7 +23,8 @@
     "async": "^0.9.0",
     "chalk": "^1.0.0",
     "is-absolute": "^0.1.5",
-    "lodash": "^3.3.1"
+    "lodash": "^3.3.1",
+    "resolve": "^1.1.5"
   },
   "devDependencies": {
     "fs-extra": "^0.16.4",
